first protoype version

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,21 @@
 [rules]
+min_frame_time = 0.001
 teams_equal = True
+factions = 3
 
 [team_default]
+players = 40
 speed = 1
-vision_range = 50
-players = 10
+hunt_range = 700
+avoid_range = 25
+escape_range = 150
+conquer_range = 20
 
-[rock]
+[faction1]
+beats = 2
 
-[paper]
+[faction2]
+beats = 3
 
-[scissors]
+[faction3]
+beats = 1
