non-equal players per faction, variable faction number & bugfixes

--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,30 @@
 [rules]
-min_frame_time = 0.001
-teams_equal = True
+min_frame_time = 0.01
+teams_equal = False
 factions = 3
 
 [team_default]
 players = 40
 speed = 1
-hunt_range = 700
+hunt_range = 800
 avoid_range = 25
 escape_range = 150
 conquer_range = 20
 
 [faction1]
+players = 30
 beats = 2
 
 [faction2]
+players = 20
 beats = 3
 
 [faction3]
+players = 10
 beats = 1
+
+[faction4]
+beats = 1,2
+
+[faction5]
+beats = 1,2,3,4
