determination of game winner, faction specific stats, skill point based stats for factions, game statistics on screen & bugfixes

--- a/config.ini
+++ b/config.ini
@@ -1,30 +1,49 @@
+[tournament]
+tournament_mode = False
+start_random = True
+
 [rules]
 min_frame_time = 0.01
 teams_equal = False
 factions = 3
 
 [team_default]
-players = 40
-speed = 1
-hunt_range = 800
-avoid_range = 25
-escape_range = 150
-conquer_range = 20
+players = 10
+speed = 10
+hunt_range = 10
+avoid_range = 10
+escape_range = 10
+conquer_range = 10
 
 [faction1]
-players = 30
 beats = 2
+players = 20
+speed = 30
+hunt_range = 10
+avoid_range = 10
+escape_range = 10
+conquer_range = 10
 
 [faction2]
-players = 20
 beats = 3
+players = 0
+speed = 10
+hunt_range = 10
+avoid_range = 10
+escape_range = 10
+conquer_range = 10
 
 [faction3]
-players = 10
 beats = 1
+players = 0
+speed = 10
+hunt_range = 10
+avoid_range = 10
+escape_range = 10
+conquer_range = 10
 
 [faction4]
-beats = 1,2
+beats = 1
 
 [faction5]
-beats = 1,2,3,4
+beats = 1
