weights now part of skill tree, code cleanup, bugfix

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,9 @@ hunt_range = 10
 avoid_range = 10
 escape_range = 10
 conquer_range = 10
+hunt_weight = 10
+avoid_weight = 10
+escape_weight = 10
 
 [faction1]
 beats = 2
@@ -23,6 +26,9 @@ hunt_range = 10
 avoid_range = 10
 escape_range = 10
 conquer_range = 10
+hunt_weight = 10
+avoid_weight = 10
+escape_weight = 10
 
 [faction2]
 beats = 3
@@ -32,6 +38,9 @@ hunt_range = 10
 avoid_range = 10
 escape_range = 10
 conquer_range = 10
+hunt_weight = 10
+avoid_weight = 10
+escape_weight = 10
 
 [faction3]
 beats = 1
@@ -41,9 +50,24 @@ hunt_range = 10
 avoid_range = 10
 escape_range = 10
 conquer_range = 10
+hunt_weight = 10
+avoid_weight = 10
+escape_weight = 10
 
 [faction4]
 beats = 1
+players = 0
+speed = 10
+hunt_range = 10
+avoid_range = 10
+escape_range = 10
+conquer_range = 10
 
 [faction5]
 beats = 1
+players = 0
+speed = 10
+hunt_range = 10
+avoid_range = 10
+escape_range = 10
+conquer_range = 10
